Prevent flickering of group_display

--- a/css/bootstrap-overrides.css
+++ b/css/bootstrap-overrides.css
@@ -90,6 +90,10 @@
 /* Grouping popup styles */
 #group_display {
     z-index: 2000;
+    left: 0;
+    top: 0;
+    position: absolute;
+    pointer-events: none;
 }
 
 #group_display a {
@@ -109,8 +113,8 @@
     /* Purge padding */
     padding-left: 0px;
     padding-right: 0px;
-/*    border-style: solid; */
-/*    border-width: 1px; */
+    /* border-style: solid; */
+    /* border-width: 1px; */
 }
 
 .single-chip-chart {
